crates/biome_js_parser/tests/js_test_suite/error/ts_import_type_without_arguments.ts
type T = import;
type U = typeof import;
